Added lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
     <h1>Lasagna</h1>
+    <p><img src="../images/lasagna.jpeg" alt="Lasagna Picture" width="300"></p>
+    <h2>How to make an authentic Italian lasagna</h2>
+    <p><em>Straight from the streets of Bologna, Italy!</em></p>
+    <p>Ingredients:</p>
+    <ul>
+        <li>Pureed tomatoes</li>
+        <li>Ground veal</li>
+        <li>Onion - chopped</li>
+        <li>Garlic - minced</li>
+        <li>Pasta sheets</li>
+        <li>Mozarella cheese - shredded</li>
+    </ul>
+    <p>Steps:</p>
+    <ol>
+        <li>Make tomato sauce with ground veal, onion and garlic</li>
+        <li>Spread tomatoes on pan</li>
+        <li>Add pasta sheets</li>
+        <li>Add cheese</li>
+        <li>Keep repeating for several layers until pan is full. Should be at least 5 layers</li>
+    </ol>
 </body>
 </html>
